gcc/testsuite/gdc.test/fail_compilation/fail5634.d
/*
TEST_OUTPUT:
----
fail_compilation/fail5634.d(9): Error: function `D main()` conflicts with previous declaration at fail_compilation/fail5634.d(8)
---
*/

void main() { }
void main() { }
